--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,5 @@
 #Thu Sep 26 21:59:02 IST 2024
 driver=chrome
 ecommerceurl=https://rahulshettyacademy.com/client
+id_available=2
+id_not_available=23
